# pypermissive

./: README.md  TODO  pyproject.toml
.github/workflows/: ci.yml  test.yml
pypermissive/: __init__.py  base_model.py  decorators.py  field.py  validator.py
tests/: conftest.py  test_base_model.py  test_decorators.py  test_field.py  test_validator.py  util.py
