[tool.poetry]
name = "pypermissive"
version = "1.0.0"
description = "Validation library"
authors = ["kaliv0 <kaloyan.ivanov88@gmail.com>"]
readme = "README.md"
license = "LICENSE"
# TODO: add keywords, repo url, include main src only in build, change version

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
