[tool.poetry]
name = "pypermissive"
version = "1.1.2"
description = "Validation library"
authors = ["kaliv0 <kaloyan.ivanov88@gmail.com>"]
readme = "README.md"
license = "LICENSE"
keywords = ["validation library", "type validator"]
repository = "https://github.com/kaliv0/pypermissive"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
